added media query on mixin - about section

--- a/index.html
+++ b/index.html
@@ -146,98 +146,120 @@
 
 
     <!-- banner section start -->
-    <section id="banner">
+    <section class="banner">
         <div class="container">
-            <div class="row slide_banner">
+            <div class="row banner__slider">
                 <!-- Slide 1 -->
                 <div class="col-12">
                     <div class="row">
                         <div class="col-md-6 col-12 order-2 order-md-0 bnnr_txt">
-                            <h2 class="bnnr_head animate__animated animate__bounceInDown">24/7 graphics media</h2>
-                            <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
-                                Price</span>
+                            <div class="banner__content_text">
+                                <h2 class="bnnr_head animate__animated animate__bounceInDown">24/7 graphics media</h2>
 
-                            <ul class="btns d-flex">
-                                <li><a href="contact.html" class="misBtn animate__animated animate__bounceIn">Order
-                                        now</a></li>
-                                <li><button class="misBtn inactive animate__animated animate__bounceIn">wanna
-                                        talk?</button></li>
-                            </ul>
+                                <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
+                                    Price</span>
+
+                                <ul class="btns d-flex">
+                                    <li><a href="contact.html" class="misBtn animate__animated animate__bounceIn">Order
+                                            now</a></li>
+                                    <li><button class="misBtn  animate__animated animate__bounceIn">wanna
+                                            talk?</button></li>
+                                </ul>
+                            </div>
+
                         </div>
-                        <div class="col-md-6 col-12 order-1 order-md-0 bnnr_img">
-                            <img src="assets/img/banner/banner_4.png" alt="" class="img-fluid">
+                        <div class="col-md-6 col-12 order-1 order-md-0 ">
+                            <div class="banner__img-content">
+                                <img src="assets/img/banner/banner_4.png" alt="banner_content_img">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Slide 2 -->
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-md-6 col-12 order-2 order-md-0 bnnr_txt">
-                            <h2 class="bnnr_head">Image Processing</h2>
-                            <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
-                                Price</span>
+                        <div class="col-md-6 col-12 order-2 order-md-0">
+                            <div class="banner__content_text">
+                                <h2 class="bnnr_head">Image Processing</h2>
+                                <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
+                                    Price</span>
 
-                            <ul class="btns d-flex">
-                                <li><a href="contact.html" class="misBtn">Order now</a></li>
-                                <li><button class="misBtn inactive">wanna talk?</button></li>
-                            </ul>
+                                <ul class="btns d-flex">
+                                    <li><a href="contact.html" class="misBtn">Order now</a></li>
+                                    <li><button class="misBtn ">wanna talk?</button></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-12 order-1 order-md-0 bnnr_img">
-                            <img src="assets/img/banner/banner_4.png" alt="" class="img-fluid">
+                        <div class="col-md-6 col-12 order-1 order-md-0 ">
+                            <div class="banner__img-content">
+                                <img src="assets/img/banner/banner_4.png" alt="banner_content_img">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- slide 3 -->
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-md-6 col-12 order-2 order-md-0 bnnr_txt">
-                            <h2 class="bnnr_head">Graphics Solution</h2>
-                            <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
-                                Price</span>
+                        <div class="col-md-6 col-12 order-2 order-md-0">
+                            <div class="banner__content_text">
+                                <h2 class="bnnr_head">Graphics Solution</h2>
+                                <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
+                                    Price</span>
 
-                            <ul class="btns d-flex">
-                                <li><a href="contact.html" class="misBtn">Order now</a></li>
-                                <li><button class="misBtn inactive">wanna talk?</button></li>
-                            </ul>
+                                <ul class="btns d-flex">
+                                    <li><a href="contact.html" class="misBtn">Order now</a></li>
+                                    <li><button class="misBtn ">wanna talk?</button></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-12 order-1 order-md-0 bnnr_img">
-                            <img src="assets/img/banner/banner_4.png" alt="" class="img-fluid">
+                        <div class="col-md-6 col-12 order-1 order-md-0 ">
+                            <div class="banner__img-content">
+                                <img src="assets/img/banner/banner_4.png" alt="banner_content_img">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Slide 4 -->
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-md-6 col-12 order-2 order-md-0 bnnr_txt">
-                            <h2 class="bnnr_head">Web UI & Development</h2>
-                            <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
-                                Price</span>
+                        <div class="col-md-6 col-12 order-2 order-md-0">
+                            <div class="banner__content_text">
+                                <h2 class="bnnr_head">Web UI & Development</h2>
+                                <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
+                                    Price</span>
 
-                            <ul class="btns d-flex">
-                                <li><a href="contact.html" class="misBtn">Order now</a></li>
-                                <li><button class="misBtn inactive">wanna talk?</button></li>
-                            </ul>
+                                <ul class="btns d-flex">
+                                    <li><a href="contact.html" class="misBtn">Order now</a></li>
+                                    <li><button class="misBtn ">wanna talk?</button></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-12 order-1 order-md-0 bnnr_img">
-                            <img src="assets/img/banner/banner_4.png" alt="" class="img-fluid">
+                        <div class="col-md-6 col-12 order-1 order-md-0 ">
+                            <div class="banner__img-content">
+                                <img src="assets/img/banner/banner_4.png" alt="banner_content_img">
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Slide 5 -->
                 <div class="col-12">
                     <div class="row">
-                        <div class="col-md-6 col-12 order-2 order-md-0 bnnr_txt">
-                            <h2 class="bnnr_head">Video Processing</h2>
-                            <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
-                                Price</span>
+                        <div class="col-md-6 col-12 order-2 order-md-0">
+                            <div class="banner__content_text">
+                                <h2 class="bnnr_head">Video Processing</h2>
+                                <span class="head_txt">High Quality | Quick Response | Acquainted of Deadline | Best
+                                    Price</span>
 
-                            <ul class="btns d-flex">
-                                <li><a href="contact.html" class="misBtn">Order now</a></li>
-                                <li><button class="misBtn inactive">wanna talk?</button></li>
-                            </ul>
+                                <ul class="btns d-flex">
+                                    <li><a href="contact.html" class="misBtn">Order now</a></li>
+                                    <li><button class="misBtn ">wanna talk?</button></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="col-md-6 col-12 order-1 order-md-0 bnnr_img">
-                            <img src="assets/img/banner/banner_4.png" alt="" class="img-fluid">
+                        <div class="col-md-6 col-12 order-1 order-md-0 ">
+                            <div class="banner__img-content">
+                                <img src="assets/img/banner/banner_4.png" alt="banner_content_img">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -250,7 +272,7 @@
     <section id="about" class="sec-pad">
         <div class="container">
             <div class="row section-head">
-                <div class="sec-title bar text-center">
+                <div class="sec-title  text-center">
                     <h2 class="title animate__animated animate__rubberBand">about us</h2>
                     <img src="assets/img/bar.png" alt="bar">
                 </div>
